--- a/news/src/main/res/layout/activity_news.xml
+++ b/news/src/main/res/layout/activity_news.xml
@@ -12,12 +12,16 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <Button
+                android:id="@+id/see_article_button"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/news_sample_text"/>
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="Check out this article"/>
 
         </LinearLayout>
 
