--- a/news/src/main/res/layout/activity_news.xml
+++ b/news/src/main/res/layout/activity_news.xml
@@ -15,6 +15,11 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/message"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
             <Button
                 android:id="@+id/see_article_button"
                 android:layout_width="match_parent"
