--- a/stories/src/main/res/layout/activity_first.xml
+++ b/stories/src/main/res/layout/activity_first.xml
@@ -7,9 +7,17 @@
     tools:context="com.wbmd.appindexingpoc.FirstActivity">
 
     <TextView
+        android:id="@+id/message"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/see_article_button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Stories"/>
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="View Related Stories in Our App "/>
 
 
 </LinearLayout>
