--- a/news/src/main/res/layout/main_directory.xml
+++ b/news/src/main/res/layout/main_directory.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.wbmd.appindexingpoc.MainDirectoryActivity">
+    tools:context="com.wbmd.appindexingpoc.activity.MainDirectoryActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
