--- a/news/src/main/res/layout/activity_profile_details.xml
+++ b/news/src/main/res/layout/activity_profile_details.xml
@@ -5,35 +5,44 @@
     android:layout_gravity="center"
     android:background="@android:color/white">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_alignParentTop="true"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
-        android:layout_height="?android:actionBarSize">
-    </android.support.v7.widget.Toolbar>
+        android:layout_height="wrap_content"
+        android:background="#ffffff">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_alignParentTop="true"
+            android:layout_width="match_parent"
+            android:elevation="2dp"
+            android:layout_height="?android:actionBarSize">
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/appbar_layout">
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/profile_image"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            android:layout_below="@+id/toolbar"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15dp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/profile_main_layout"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/profile_image"
-        android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/profile_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@id/profile_image"
                     android:text="profile"
                     android:textSize="22sp" />
 
@@ -41,31 +50,30 @@
                     android:id="@+id/profile_specialty"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@id/profile_name"
                     android:text="specialty"
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
-            </LinearLayout>
 
              <LinearLayout
                  android:id="@+id/rating_layout"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginRight="10dp"
                     android:layout_marginTop="5dp"
                  android:layout_centerHorizontal="true"
                  android:orientation="horizontal"
                  android:visibility="gone"
-                 android:layout_below="@+id/profile_main_layout">
+                 android:layout_below="@+id/profile_specialty">
 
                     <RatingBar
                         android:id="@+id/profile_rating_bar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:isIndicator="true"
-                        android:gravity="center_horizontal"
                         android:numStars="5"
+                        android:layout_gravity="center_vertical"
                         android:stepSize="0.1" />
 
                     <TextView
@@ -73,8 +81,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:gravity="center_horizontal"
-                        android:layout_gravity="center"
+                        android:layout_gravity="center_vertical"
                         android:text="0 Ratings"
                         android:textSize="11dp" />
 
@@ -85,66 +92,65 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="222-222-2222"
-                    android:textSize="14sp"
+                    android:textSize="12sp"
+                    android:textColor="@color/webmdblue"
                     android:layout_centerHorizontal="true"
-                    android:paddingLeft="18dp"
                     android:layout_below="@+id/rating_layout"/>
 
-                <LinearLayout
-                    android:id="@+id/layout_practice_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingLeft="8dp"
-                    android:layout_centerHorizontal="true"
-                    android:gravity="center_horizontal"
-                    android:layout_below="@+id/profile_telephone">
+    <ImageView
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:src="@drawable/doctor_location"
+        android:layout_below="@+id/profile_telephone" />
 
-                    <TextView
-                        android:id="@+id/profile_practice_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="10dp"
-                        android:paddingLeft="10dp"
-                        android:text="NY Yankees"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp" />
+    <TextView
+        android:id="@+id/profile_practice_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:text="NY Yankees"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_below="@+id/map"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
 
-                    <TextView
-                        android:id="@+id/profile_practice_address_top"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:paddingLeft="8dp"
-                        android:text="395 Hudson St."
-                        android:textSize="12sp" />
-                    <TextView
-                        android:id="@+id/profile_practice_address_bottom"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:paddingBottom="10dp"
-                        android:paddingLeft="8dp"
-                        android:text="New York, NY 10014"
-                        android:textSize="12sp" />
-                </LinearLayout>
+    <TextView
+        android:id="@+id/profile_practice_address_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="15dp"
+        android:layout_below="@+id/profile_practice_name"
+        android:textSize="12sp" />
+    <TextView
+        android:id="@+id/profile_practice_address_bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_below="@+id/profile_practice_address_top"
+        android:text="New York, NY 10014"
+        android:textSize="12sp" />
 
                 <View
                     android:id="@+id/spacer"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@android:color/darker_gray"
-                    android:layout_below="@+id/layout_practice_name"/>
+                    android:background="@color/list_divider"
+                    android:layout_below="@+id/profile_practice_address_bottom" />
 
                 <TextView
                     android:id="@+id/profile_overview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_centerHorizontal="true"
-                    android:padding="16dp"
-                    android:text="Profile Overview"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="15dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:text="@string/profile_overview"
                     android:lineSpacingMultiplier="1.25"
                     android:textSize="14sp"
                     android:layout_below="@+id/spacer"/>
@@ -154,14 +160,37 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_below="@+id/profile_overview"
-                    android:background="@android:color/darker_gray" />
+                    android:background="@color/list_divider" />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:layout_margin="10dp"
                     android:layout_below="@+id/horizontal_divider_overview"/>
+    </RelativeLayout>
+    </ScrollView>
+    <LinearLayout
+        android:id="@+id/button_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true">
+
+        <TextView
+            android:id="@+id/message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/see_more_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/white"
+            android:text="@string/view_more_in_our_app"/>
+    </LinearLayout>
 
 </RelativeLayout>
