--- a/news/src/main/res/layout/item_profile.xml
+++ b/news/src/main/res/layout/item_profile.xml
@@ -2,8 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_margin="10dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
