--- a/news/src/main/res/layout/item_list.xml
+++ b/news/src/main/res/layout/item_list.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="5dp">
 
     <ImageView
         android:id="@+id/profile_image"
@@ -45,7 +46,7 @@
         android:layout_below="@+id/address_top_text"
         android:textSize="12sp"
         android:text="New York, NY 10014"
-        android:layout_marginBottom="2dp"/>
+        android:layout_marginBottom="5dp"/>
 
     <View
         android:layout_width="match_parent"
