--- a/directory/src/main/res/layout/activity_extra_item.xml
+++ b/directory/src/main/res/layout/activity_extra_item.xml
@@ -24,8 +24,31 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/appbar_layout"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="20dp"
+        android:layout_margin="20dp"
         android:fontFamily="san-serif-medium"
         android:text="test"/>
+
+    <LinearLayout
+        android:id="@+id/button_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true">
+
+        <TextView
+            android:id="@+id/message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/see_more_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/white"
+            android:text="@string/view_more_in_our_app"/>
+    </LinearLayout>
 
 </RelativeLayout>
