--- a/directory/src/main/res/layout/item_list.xml
+++ b/directory/src/main/res/layout/item_list.xml
@@ -11,8 +11,7 @@
         android:layout_alignParentLeft="true"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:src="@drawable/photo_placeholder" />
+        android:layout_marginLeft="10dp" />
     <TextView
         android:id="@+id/name_text"
         android:layout_width="wrap_content"
