--- a/directory/src/main/res/layout/item_profile.xml
+++ b/directory/src/main/res/layout/item_profile.xml
@@ -14,7 +14,6 @@
             android:id="@+id/image_header"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
-            android:src="@drawable/photo_placeholder"
             android:layout_gravity="top|center_horizontal" />
 
         <TextView
@@ -38,12 +37,12 @@
             android:text="experience_text"
             android:layout_gravity="center_horizontal"/>
 
-        <ImageView
-            android:id="@+id/logo_image"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:src="@drawable/sox_logo"
-            android:layout_gravity="center_horizontal"/>
+        <!--<ImageView-->
+            <!--android:id="@+id/logo_image"-->
+            <!--android:layout_width="45dp"-->
+            <!--android:layout_height="45dp"-->
+            <!--android:src="@drawable/sox_logo"-->
+            <!--android:layout_gravity="center_horizontal"/>-->
 
     </LinearLayout>
 
